<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
    <string name="error_empty_list">No stock information available</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>


    <!-- Strings for the StockDetails -->
    <string name="formatted_Price">$ <xliff:g id="price">%1$,.2f </xliff:g></string>
    <string name="formatted_Absolut">$ <xliff:g id="absolut_value">%1$,.2f</xliff:g> </string>
    <string name="formatted_Porcentage"><xliff:g id="porcentage">%1$,.2f</xliff:g> %% </string>
    <string name="error_no_network_chart">"No Network connectivity. Stock chart was not retrieved."</string>

    <!--Fake values for StockDetails design -->
    <string name="fake_symbol">GOOG</string>
    <string name="fake_price">$ 1000.00</string>
    <string name="fake_absolut">$ 5.60</string>
    <string name="fake_change">100 %</string>


    <!-- Fake values main activity -->
    <string name="fake_error">Error message</string>


    <!-- StockProvider Strings -->
    <string name="uri_unknown">Unknown URI: %1s</string>

    <!-- QuoteSyncJob strings -->
    <string name="running_sync_job">Running sync job</string>
    <string name="error_stock_code_not_valid">Error: the Stock code %1$s is not valid</string>
    <string name="error_fetching_stock_quotes">Error fetching stock quotes</string>
    <string name="scheduling_period_task">Scheduling a periodic task</string>


    <!-- A11y -->
    <string name="a11y_stock_symbol">Stock symbol: <xliff:g id="symbol">%1$s</xliff:g></string>
    <string name="a11y_price">Price: $ <xliff:g id="price">%1$,.2f </xliff:g></string>
    <string name="a11y_variation_$">Variation: $ <xliff:g id="symbol">%1$,.2f</xliff:g> </string>
    <string name="a11y_variation_percentage">Variation: <xliff:g id="percentage">%1$,.2f</xliff:g> %% </string>
    <string name="a11y_variation_$_minus">Variation: minus $ <xliff:g id="symbol">%1$,.2f</xliff:g> </string>
    <string name="a11y_variation_percentage_minus">Variation: minus <xliff:g id="percentage">%1$,.2f</xliff:g> %% </string>

    <!-- A11y main screen -->
    <string name="a11y_add_stock_button">Add stock button</string>

    <!-- A11y add stock dialog -->
    <string name="a11y_symbol_dialog">Enter a stock symbol (e.g. GOOG)</string>


    <!-- A11y stock details screen -->
    <string name="a11y_historical_chart">Historical chart</string>
    <string name="a11y_error_no_network_chart">@string/error_no_network_chart</string>


    <!--Stock Widget strings -->
    <string name="stock_widget_no_info">There is no information for the selected Stock</string>
    <string name="title_activity_stock_widget_configure">StockWidgetConfigure</string>


    <!--Widget Configuration screen -->
    <string name="conf_button">Add Stock</string>
    <string name="conf_symbol">Symbol (e.g. GOOG)</string>
    <string name="conf_invalid_app_widget_id">Invalid AppWidgetID</string>



    <!-- StockProvider Strings -->
    <string name="provider_db_not_open">database could not be opened</string>
    <string name="provider_widget_not_inserted">Widget could not be inserted</string>
    <string name="provider_widget_delete_problem">There was a problem deleting the Widget</string>



</resources>